Fixed general layout of website, all elements are aligned similarly to the figma doc

--- a/main.css
+++ b/main.css
@@ -15,19 +15,11 @@
 
 }
 
-html{
 
-    height: 150%;
-    width: 200%;
-
-}
 
 body {
-
+    margin: 0;
     background-color: var(--dark);
-    min-height: 150%;
-    min-width: 200%;
-
 }
 
 header {
@@ -55,12 +47,18 @@ header h3 {
 
 }
 
+.contentBoxes {
+
+    justify-content: center;
+    position: relative;
+
+
+}
+
 .experience, .projects, .organizations, .skills {
 
     background-color: var(--light);
     position: relative;
-    top: 350px;
-    right: 550px;
     text-align: center;
     border-radius: 25px;
 
@@ -70,7 +68,11 @@ header h3 {
 
     width: 400px;
     height: 300px;
+
+}
+
 .landing {
+    position: relative;
     background-image: url("background.png");
     background-position: center;
     background-repeat: no-repeat;
@@ -112,8 +114,7 @@ header h3 {
     background-color: var(--maroon);
     width: 100%;
     height: 100px;
-    position: absolute;
-    bottom: 30px;
+    position: relative;
 
 }
 
@@ -121,5 +122,11 @@ header h3 {
 
     color: var(--white);
     font-size: 0.6rem;
+
+}
+
+#navigation {
+
+    position: relative;
 
 }
